--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <li class="sidebar-item" :class="{active: activeView === 'load'}" @click="activeView = 'load'; scrollToTop()">
             <i class="fas fa-clone fa-2x"></i> <p class="collapsed">Load / Save</p>
           </li>
-          <li class="sidebar-item" :class="{active: activeView === 'options'}" @click="activeView = 'options'; scrollToTop()">
+          <li class="sidebar-item" :class="{active: activeView === 'settings'}" @click="activeView = 'settings'; scrollToTop()">
             <i class="fa fa-cog fa-2x"></i> <p class="collapsed">Settings</p>
           </li>
         </ul>
@@ -96,7 +96,7 @@
                   <span v-if="footer.preset.location.postal" :style="{color: colors.footer.text}"><span v-if="footer.preset.location.address || footer.preset.location.city"> | </span>{{footer.preset.location.postal}}</span>
                 </p>
                 <p v-if="footer.preset.phone" style="margin:0;margin-bottom: 10px;text-align:center;":style="{color: colors.footer.text}">{{footer.preset.phone}}</p>
-                <p style="margin: 0;margin-bottom:5px;font-size:10px; text-align: center;":style="{color: colors.footer.text}">Copyright &copy; {{(new Date().getFullYear())}}  All rights reserved.<br>
+                <p v-if="footer.preset.useDisclaimer" style="margin: 0;margin-bottom:5px;font-size:10px; text-align: center;":style="{color: colors.footer.text}">Copyright &copy; {{(new Date().getFullYear())}}  All rights reserved.<br>
 	         The persons and situations depicted are fictional and their resemblance to anyone living or dead is purely coincidental. This media is for information purposes only and is not intended to provide specific financial, tax, legal, accounting or other advice and should not be relied upon in that regard. Manulife Securities related companies are 100% owned by The Manufactures Life Insurance Company (MLI) which is 100% owned by the Manulife Financial Corporation a publicly traded company. Details regarding all affiliated companies of MLI can be found on the Manulife Securities website <a href="http://www.manulifesecurities.ca"  target="_blank" :style="{color: colors.links}">www.manulifesecurities.ca</a>. Please confirm with your advisor which company you are dealing with for each of your products and services.<br><br>
 	         <em><a href="http://co.manulife.ca/securities/ms_corporatedisclaimers" target="_blank" :style="{color: colors.links}">Manulife Securities Disclaimers</a> | <a href="https://www.manulife.ca/corporate/privacy-policy.html" target="_blank" :style="{color: colors.links}">Privacy Policy</a> | <a href="https://www.manulife.com/en/legal.html" target="_blank" :style="{color: colors.links}">Legal</a></em></p>
             <p v-if="footer.preset.email" style="margin: 0;font-size:12px; text-align: center;"><a :href="'mailto:' + footer.preset.email + '?subject=Unsubscribe from newsletters'":style="{color: colors.links}">Unsubscribe from newsletters</a></p
@@ -420,14 +420,24 @@
           </div>
         </div>
 
-        <div id="options" class="main-view" :class="{open: activeView === 'options'}">
-
+        <div id="settings" class="main-view" :class="{open: activeView === 'settings'}">
           <div class="card">
             <h3 class="card-title">Enable MS Word Support</h3>
             <p><small>This can cause issues if enabled and is being used in an email.<br><br>After pasting into word right click on the table, open table properties, go to columns, and unselect <strong>Preffered Width</strong>. Then you can drag the column width manually to fit the image</small></p>
             <div class="form-item">
               <input type="checkbox" v-model="wordSupport" id="enableWordSupport">
               <label for="enableWordSupport">Word Support</label>
+            </div>
+          </div>
+          <div class="card">
+            <h3 class="card-title">Use Manulife Disclaimer in Footer Preset</h3>
+            <p><small>Copyright © 2020 All rights reserved.
+The persons and situations depicted are fictional and their resemblance to anyone living or dead is purely coincidental. This media is for information purposes only and is not intended to provide specific financial, tax, legal, accounting or other advice and should not be relied upon in that regard. Manulife Securities related companies are 100% owned by The Manufactures Life Insurance Company (MLI) which is 100% owned by the Manulife Financial Corporation a publicly traded company. Details regarding all affiliated companies of MLI can be found on the Manulife Securities website www.manulifesecurities.ca. Please confirm with your advisor which company you are dealing with for each of your products and services.
+<br><br>
+Manulife Securities Disclaimers | Privacy Policy | Legal</small></p>
+            <div class="form-item">
+              <input type="checkbox" v-model="footer.preset.useDisclaimer" id="useManulifeDisclaimer">
+              <label for="useManulifeDisclaimer">Use Disclaimer</label>
             </div>
           </div>
         </div>
