Copyright symbol updated

--- a/index.html
+++ b/index.html
@@ -431,10 +431,10 @@
           </div>
           <div class="card">
             <h3 class="card-title">Use Manulife Disclaimer in Footer Preset</h3>
-            <p><small>Copyright © 2020 All rights reserved.
-The persons and situations depicted are fictional and their resemblance to anyone living or dead is purely coincidental. This media is for information purposes only and is not intended to provide specific financial, tax, legal, accounting or other advice and should not be relied upon in that regard. Manulife Securities related companies are 100% owned by The Manufactures Life Insurance Company (MLI) which is 100% owned by the Manulife Financial Corporation a publicly traded company. Details regarding all affiliated companies of MLI can be found on the Manulife Securities website www.manulifesecurities.ca. Please confirm with your advisor which company you are dealing with for each of your products and services.
-<br><br>
-Manulife Securities Disclaimers | Privacy Policy | Legal</small></p>
+            <p><small>Copyright &copy; 2020 All rights reserved.
+              The persons and situations depicted are fictional and their resemblance to anyone living or dead is purely coincidental. This media is for information purposes only and is not intended to provide specific financial, tax, legal, accounting or other advice and should not be relied upon in that regard. Manulife Securities related companies are 100% owned by The Manufactures Life Insurance Company (MLI) which is 100% owned by the Manulife Financial Corporation a publicly traded company. Details regarding all affiliated companies of MLI can be found on the Manulife Securities website www.manulifesecurities.ca. Please confirm with your advisor which company you are dealing with for each of your products and services.
+              <br><br>
+              Manulife Securities Disclaimers | Privacy Policy | Legal</small></p>
             <div class="form-item">
               <input type="checkbox" v-model="footer.preset.useDisclaimer" id="useManulifeDisclaimer">
               <label for="useManulifeDisclaimer">Use Disclaimer</label>
