--- a/index.html
+++ b/index.html
@@ -11,6 +11,17 @@
 
     <title>Newsletter Generator v2</title>
     <link rel="icon" href="imgs\icons8-news-128.png">
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-121992018-3"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-121992018-3');
+    </script>
+
   </head>
   <body>
     <div id="body-wrapper">
