--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         <div id="setup" class="main-view" :class="{open: activeView === 'setup'}">
           <div class="card">
             <h3 class="card-title">Load Posts For the Newsletter</h3>
-            <span class="card-title-icon" title="For multiple posts use your blog page's url&#10;For single posts use the blog post's url"><i class="fas fa-question-circle tool-icon"></i></span>
+            <span class="card-title-icon" title="For multiple posts use your blog page's url&#10;For individual posts use the blog post's url"><i class="fas fa-question-circle tool-icon"></i></span>
             <p>Load Multiple Posts</p>
             <div class="form-item split">
               <div>
