Switch of top/bottom and up/down in help

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           Randy Bimm<br>
           &copy; 2020
       </aside>
-      <aside id="preview"  :class="{large: activeView == 'preview'}" ref="preview">
+      <aside id="preview" class=""  :class="{large: activeView == 'preview'}" ref="preview">
         <div class="preview-header">
           <h3>Newsletter Preview</h3>
         </div>
@@ -525,8 +525,8 @@
               </ul>
               <li>Re-order your posts using the arrow head icons to the left of each post</li>
               <ul style="list-style-type: square">
-                <li><strong><i class="fas fa-sort-up" style="color: #aeaeae;"></i></strong> will move the post up/down</li>
-                  <li><strong><i class="fas fa-chevron-up" style="color: #aeaeae;"></i></strong> will move the post to the top/bottom</li>
+                <li><strong><i class="fas fa-chevron-up" style="color: #aeaeae;"></i> <i class="fas fa-chevron-down" style="color: #aeaeae;"></i></strong> will move the post to the top/bottom</li>
+                <li><strong><i class="fas fa-sort-up" style="color: #aeaeae;"></i> <i class="fas fa-sort-down" style="color: #aeaeae;vertical-align: super;"></i></strong> will move the post up/down</li>
               </ul>
             </ol>
           </div>
