--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
           </div>
           <div class="card">
             <h3 class="card-title">Google Analytics</h3>
-            <span class="card-title-icon" title="Google Analytics on Newsletters is still being tested&#10;We don't guarentee that the analytics on newsletters will work as intended"><i class="fas fa-question-circle tool-icon"></i></span>
+            <span class="card-title-icon" title="Google Analytics on Newsletters is still being tested&#10;We don't guarantee that analytics on newsletters will work as intended"><i class="fas fa-question-circle tool-icon"></i></span>
             <div class="form-item">
               <input type="text" id="analytics-code" v-model="analytics.code" required>
               <label for="analytics-code">Analytics Code</label>
