Added styling to accordion selection

--- a/index.html
+++ b/index.html
@@ -157,11 +157,13 @@
             <div class="accordion" :class="{open: header.style == 0}" @click="header.style = 0">
               <div class="accordion-title">
                 <p>No Header</p>
+                <div></div>
               </div>
             </div>
             <div class="accordion" :class="{open: header.style == 1}" @click="header.style = 1">
               <div class="accordion-title">
                 <p>Use Image</p>
+                <div></div>
               </div>
               <div class="accordion-content">
                 <div class="form-item">
@@ -173,6 +175,7 @@
             <div class="accordion" :class="{open: header.style == 2}" @click="header.style = 2">
               <div class="accordion-title">
                 <p>Use Titles</p>
+                <div></div>
               </div>
               <div class="accordion-content">
                 <div class="form-item">
@@ -188,6 +191,7 @@
             <div class="accordion" :class="{open: header.style == 3}"  @click="header.style = 3">
               <div class="accordion-title">
                 <p>Custom HTML</p>
+                <div></div>
               </div>
               <div class="accordion-content">
                 <div class="form-item">
@@ -202,11 +206,13 @@
             <div class="accordion" :class="{open: footer.style == 0}" @click="footer.style = 0">
               <div class="accordion-title">
                 <p>No Footer</p>
+                <div></div>
               </div>
             </div>
             <div class="accordion" :class="{open: footer.style == 1}" @click="footer.style = 1">
               <div class="accordion-title">
                 <p>Use Template</p>
+                <div></div>
               </div>
               <div class="accordion-content">
                 <div class="form-item split even">
@@ -271,6 +277,7 @@
             <div class="accordion" :class="{open: footer.style == 2}"  @click="footer.style = 2">
               <div class="accordion-title">
                 <p>Custom HTML</p>
+                <div></div>
               </div>
               <div class="accordion-content">
                 <div class="form-item">
