--- a/index.html
+++ b/index.html
@@ -87,13 +87,13 @@
                  <span v-html="header.html" :style="{color: colors.header.text}"></span>
               </td>
             </tr>
-            <tr v-for="post in posts" style="position:relative;width: 100%; background: #f3f3f3; border-radius: 15px; padding: 10px; align-items: left; border-color: #f3f3f3">
+            <tr v-for="post in posts" style="position:relative;width: 100%; background: #f3f3f3; border-radius: 15px; padding: 10px; align-items: left; border-color: #f3f3f3" :style="{'background-color': colors.posts.background}">
               <td v-if="post.img" :width="[wordSupport ? '200' : '']" style="width:200px; padding-right:25px;" valign="top"><img :src="post.img" :width="[wordSupport ? '220' : '100%']" :height="[wordSupport ? '157' : 'auto']" style="width: 100%;min-width:200px; height: auto;padding: 10px;"></td>
               <td v-if="post.img" style="width:100%;padding:10px; padding-bottom: 20px;">
-                 <h2 style="margin-bottom:0;" v-html="post.title"></h2><p style="font-size: .75em; color: #777;" v-html="post.date"></p><p v-html="post.desc"></p>
+                 <h2 style="margin-bottom:0;" v-html="post.title" :style="{'color': colors.posts.text}"></h2><p style="font-size: .75em;opacity: .75;" :style="{'color': colors.posts.text}" v-html="post.date"></p><p :style="{'color': colors.posts.text}" v-html="post.desc" ></p>
                  <table v-if="post.link" width="100%" border="0" cellspacing="0" cellpadding="0"> <tr> <td> <table border="0" cellspacing="0" cellpadding="0"> <tr> <td :bgcolor="colors.button" style="padding: 12px 18px 12px 18px; border-radius:3px;" align="center"><a target="_blank" :href="post.link" style="color: #fff;text-decoration:none;"><strong style="font-weight:normal">Read More</strong></a></td> </tr> </table> </td> </tr> </table></td>
               <td v-else colspan="2" style="width:100%;padding:10px; padding-bottom: 20px;">
-                <h2 style="margin-bottom:0;" v-html="post.title"></h2><p style="font-size: .75em; color: #777;" v-html="post.date"></p><p v-html="post.desc"></p>
+                <h2 style="margin-bottom:0;" :style="{'color': colors.posts.text}" v-html="post.title"></h2><p style="font-size: .75em; opacity:.75;" :style="{'color': colors.posts.text}" v-html="post.date"></p><p :style="{'color': colors.posts.text}" v-html="post.desc"></p>
                 <table v-if="post.link"  width="100%" border="0" cellspacing="0" cellpadding="0"> <tr> <td> <table border="0" cellspacing="0" cellpadding="0"> <tr> <td :bgcolor="colors.button" style="padding: 12px 18px 12px 18px; border-radius:3px;" align="center"><a target="_blank" :href="post.link" style="color: #fff;text-decoration:none;"><strong style="font-weight:normal">Read More</strong></a></td> </tr> </table> </td> </tr> </table></td>
             </tr>
             <tr v-if="footer.style == '1'" style="position:relative;width: 100%; border-radius: 15px; padding: 10px; align-items: left; border-color: #f3f3f3" :style="{'background-color': colors.footer.background}">
@@ -308,6 +308,16 @@
               <div>
                 <input id="headerText" type="color" v-model="colors.header.text" :class="{light: isLight(colors.header.text)}">
                 <label for="headerText">Header Text</label>
+              </div>
+            </div>
+            <div class="form-item split even">
+                <div>
+                  <input id="postColor" type="color" v-model="colors.posts.background" :class="{light: isLight(colors.posts.background)}">
+                  <label for="postColor">Post Colour</label>
+              </div>
+              <div>
+                <input id="postText" type="color" v-model="colors.posts.text" :class="{light: isLight(colors.posts.text)}">
+                <label for="postText">Post Text</label>
               </div>
             </div>
             <div class="form-item split even">
