--- a/index.html
+++ b/index.html
@@ -559,21 +559,22 @@
             <h3 class="card-title">How to <strong>Load / Save</strong> the Newsletter Options & Posts</h3>
             <p><strong><small>If options/posts have been saved locally you'll recieve a popup in the bottom right to quickly load them when you open the newsletter generator
               <br>(Hover over the <strong><i class="fas fa-question-circle" style="color: #aeaeae;"></i></strong> or each button for tips)</small></strong></p>
+              <p><strong><small>For most situations you should only use the load/save locally buttons</small></strong></p>
             <ol>
               <li>Go to the <strong>Load / Save</strong> tab</li>
               <li><strong>Option Management</strong> will manage your header, footer and colours</li>
               <ul style="list-style-type: square">
                 <li><strong>Load Options Locally</strong> will load your options you've saved locally in your browser</li>
                 <li><strong>Save Options Locally</strong> will save your options into your browser</li>
-                <li><strong>Import Options</strong> will load a .json file containing your options</li>
-                <li><strong>Export Options</strong> will save a .json file containing your options</li>
+                <li><small><strong>Import Options</strong> will load a .json file containing your options</small></li>
+                <li><small><strong>Export Options</strong> will save a .json file containing your options</small></li>
               </ul>
               <li><strong>Post Management</strong> will manage your loaded posts, and custom posts</li>
               <ul style="list-style-type: square">
-                <li><strong>Load Posts Locally</strong>will load your posts you've saved locally in your browser</li>
+                <li><strong>Load Posts Locally</strong> will load your posts you've saved locally in your browser</li>
                 <li><strong>Save Posts Locally</strong> will save your posts into your browser</li>
-                <li><strong>Import Posts</strong> will load a .json file containing your posts</li>
-                <li><strong>Export Posts</strong> will save a .json file containing your posts</li>
+                <li><small><strong>Import Posts</strong> will load a .json file containing your posts</small></li>
+                <li><small><strong>Export Posts</strong> will save a .json file containing your posts</small></li>
               </ul>
             </ol>
           </div>
